fix: button hover on safari
Closes #220

--- a/src/components/freestanding/button/button.module.css
+++ b/src/components/freestanding/button/button.module.css
@@ -30,6 +30,7 @@
 
   &:active {
     background: var(--colors-base-grey--next);
+    border: 4px solid var(--colors-themed-light--next);
   }
 
   &:disabled {
@@ -56,6 +57,7 @@
 
   &:active {
     background: var(--colors-base-grey--next);
+    border: 4px solid var(--colors-themed-light--next);
   }
 
   &:disabled {
